fix 2 loading error in gallery on mobile device (mem issue?)

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -56,12 +56,10 @@ margin-top: unset;
 }
 
 .rj-gallery-card .image-container {
-  position: relative;
-  /* height: 0; */
-  /* padding-bottom: 56.25%; */
-  min-height: 280px;
+ position: relative;
+  height: 0;
+  padding-bottom: 56.25%; /* Adjust this value according to your desired aspect ratio (16:9 in this case) */
   overflow: hidden;
-  /* border-radius: 10px; */
 }
 
 .rj-gallery-card .img-wrapper {
@@ -74,16 +72,15 @@ margin-top: unset;
 
 
 .rj-gallery-card .image-container img {
-  /* position: absolute; */
-  /* top: 0;
-  left: 0; */
+   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: contain;
-  /* max-width: 330px; */
-  max-height: 100%;
-  /* cursor: pointer; */
   border: 1px solid #0006;
+  
+  transition: opacity 1s;
 }
 
 .loaded {
@@ -242,36 +239,14 @@ img {
 transition: opacity 0.5s ease-in-out;
 }
 
-.lazy-image-placeholder {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
+.placeholder {
+  background-color: #f0f0f0;
 }
 
-.lazy-image-placeholder {
-  opacity: 1;
-  transition: opacity 1.5s ease-in-out;
-	
-}
-
-.lazy-image-loaded {
+.lozad {
   opacity: 0;
-  transition: opacity 1.5s ease-in-out;
 }
 
-.lazy-image-loaded.loaded {
+.lozad.fade {
   opacity: 1;
 }
-
-
-  .lozad {
-    opacity: 0;
-    transition: opacity 1s;
-  }
-
-  .lozad.fade {
-    opacity: 1;
-  }
